--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongodb:
     image: mongo:7
@@ -14,22 +12,14 @@ services:
       - "8000:8000"
     env_file:
       - ./backend/.env
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017/mad_photography
+      - FRONTEND_URL=http://localhost:5173
     depends_on:
       - mongodb
     volumes:
       - ./backend:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "5173:5173"
-    depends_on:
-      - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    command: npm run dev -- --host
 
 volumes:
   mongo_data:
