--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local env filres 
+*.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local  
